--- a/crwn-clothing/package.json
+++ b/crwn-clothing/package.json
@@ -6,11 +6,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "firebase": "^8.5.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
@@ -23,11 +28,7 @@
     "workbox-range-requests": "^5.1.3",
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
-    "workbox-streams": "^5.1.3",
-    "firebase": "^8.5.0",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.0",
-    "redux-logger": "^3.0.6"
+    "workbox-streams": "^5.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
